# organism

./: .gitignore  Cargo.toml  DataChain_chain.json  KeyChain_chain.json  README.md  synapse_chain.json  task.md  🔋 node2_child_1760699975488 shared ener.txt
data/blocks/: DataChain_1.json  DataChain_10.json  DataChain_100.json  DataChain_101.json  DataChain_102.json  DataChain_103.json  DataChain_104.json  DataChain_105.json  DataChain_106.json  DataChain_107.json  DataChain_108.json  DataChain_109.json  DataChain_11.json  DataChain_110.json  DataChain_111.json  DataChain_112.json  DataChain_113.json  DataChain_114.json  DataChain_115.json  DataChain_116.json  DataChain_117.json  DataChain_118.json  DataChain_119.json  DataChain_12.json  DataChain_120.json  DataChain_121.json  DataChain_122.json  DataChain_123.json  DataChain_13.json  DataChain_14.json  DataChain_15.json  DataChain_16.json  DataChain_17.json  DataChain_18.json  DataChain_19.json  DataChain_2.json  DataChain_20.json  DataChain_21.json  DataChain_22.json  DataChain_23.json  (+244 more)
src/: api.rs  block.rs  brain.rs  chain.rs  economy.rs  economy_cycle.rs  energy.rs  energy_evolution.rs  interaction.rs  main.rs  memory.rs  network.rs  neuron.rs  node.rs  synapse.rs  wallet.rs
