[package]
name = "organism"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
rand_chacha = "0.3"
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
md5 = "0.7" 
axum = "0.7"  
tower = "0.4"                 # ✅ добавь эту строку
tower-http = { version = "0.5", features = ["cors"] }  # ✅ для CORS
futures = "0.3" 
 